# Prefect_Workflows

./: .env.example  .gitignore  README.md  Sales Header and Detail.py  config.yaml  flow.py  preferences.md  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  hourly.yml
docs/: marketplace-monitor-spec.md
src/marketplace_monitor/: __init__.py  config.py  dedupe.py  deliver.py  doctor.py  models.py  normalize.py  notify.py  prefilter.py  report.py  run.py  score.py  store.py
src/marketplace_monitor/adapters/: __init__.py  apify.py  base.py  craigslist.py  ebay.py  facebook.py  ksl.py  offerup.py  registry.py
tests/: test_adapters.py  test_dedupe.py  test_doctor.py  test_pipeline.py
