[project]
name = "marketplace-monitor"
version = "1.0.0"
description = "Scan local marketplaces daily and email a ranked, LLM-scored digest of the best matches."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.49",
    "requests>=2.31",
    "feedparser>=6.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
craigslist = ["curl_cffi>=0.7"]
turso = ["libsql-experimental>=0.0.37"]
prefect = ["prefect>=3.0"]
dev = ["pytest>=8.0"]

[project.scripts]
marketplace-monitor = "marketplace_monitor.run:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
